--- a/src/CSS/verifyOtp.css
+++ b/src/CSS/verifyOtp.css
@@ -52,9 +52,8 @@
 }
 input[type="number"]::-webkit-outer-spin-button,
 input[type="number"]::-webkit-inner-spin-button {
-  -webkit-appearance: none;
+  appearance: none;
 }
-
 .verifyOtp-btn{
     width: 100%;
     height: 34px;
