--- a/src/CSS/forgot.css
+++ b/src/CSS/forgot.css
@@ -78,8 +78,10 @@
 }
 .openVerify-window-active{
     position: absolute;
-    top: -32%;
-    left: -6%;
+    top: -100%;
+    left: -32%;
+    right: 0;
+    bottom: 0;
     transform: scale(1);
     transition: .3s ease;
 }
