--- a/src/CSS/depositHistory.css
+++ b/src/CSS/depositHistory.css
@@ -4,7 +4,7 @@
 }
 .depositHistory-section{
     position: relative;
-    width: 56.5%;
+    width: 770px;
     max-width: 767px;
     height: 92vh;
     text-align: center;
@@ -14,7 +14,7 @@
     overflow: hidden;
 }
 .deposit-heading{
-    margin-top: -10px;
+    margin-top: -5px;
     position: relative;
 }
 .depositHistory-section h1{
@@ -25,14 +25,14 @@
 }
 .table-panel{
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: space-between;
-    padding: 1.7rem 0.8rem 1rem;
+    padding: 1.5rem 0.6rem 1rem;
     color: #e0e1e2;
 }
 .filter{
     display: flex;
-    align-items: flex-end;
+    /* align-items: flex-start; */
 }
 .filter span{
     font-size: 22px;
@@ -46,9 +46,81 @@
     display: flex;
     gap: 20px;
 }
-.user-filling-select select{
+.select-option{
     padding: 4px 20px;
     background-color: #e0e1e2;
     font-weight: 600;
     font-size: 12px;
+    color: black !important;
+}
+/* ---------- rsuit classes ---------- */
+.rs-input-group{
+    width: 12.2rem !important;
+    background-color: #e0e1e2 !important;
+    border-radius: 0px !important;
+    border: 1px solid gray !important;
+}
+.rs-input-group input{
+    background-color: #e0e1e2 !important;
+}
+.rs-input{
+    color: #000 !important;
+    font-size: 11px !important;
+    font-weight: 600 !important;
+    padding-left: 20px !important;
+}
+.rs-input::placeholder{
+    color: #000 !important;
+    font-weight: 600 !important;
+}
+.rs-input-group-addon{
+    display: none !important;
+}
+.rs-picker-daterange-header{
+    display: none;
+}
+.rs-input-group:focus-within.rs-input-group-focus{
+    visibility: hidden;
+}
+/* ---------------------- */
+
+.table-section{
+    height: 100%;
+    padding: 0 10px;
+    /* border: solid red; */
+}
+.table-content{
+    height: 100%;
+}
+.table-custom{
+    height: 72%;
+    overflow-y: auto;
+    /* padding-bottom: 100px; */
+    /* border: solid blue; */
+}
+.table-custom::-webkit-scrollbar {
+    width: 5px;               /* width of the entire scrollbar */
+}
+.table-custom::-webkit-scrollbar-track {
+    background: #e4e2e2;         /* color of the tracking area */
+    border-radius: 20px;
+}
+.table-custom::-webkit-scrollbar-thumb {
+    background-color: #b63f0f;    /* color of the scroll thumb */
+    border-radius: 20px;       /* roundness of the scroll thumb */
+}
+.table{
+    text-align: left;
+    background-color: #212529 !important;
+}
+.table.table-striped{
+    margin-bottom: 0;
+}
+.table>:not(caption)>*>*{
+    background-color: #212529 !important;
+    border-bottom: solid #666666;
+    color: #e0e1e2 !important;
+}
+.table-striped>tbody>tr:nth-of-type(odd)>*{
+    background-color: #3a3a3a85 !important;
 }
