--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
   margin: 0;
   padding: 0;
 }
+a{
+  color: initial !important;
+  text-decoration: none !important;
+}
 .App {
   height: 100vh; 
   background-color: #0e0c0c;
