--- a/src/CSS/withdraw.css
+++ b/src/CSS/withdraw.css
@@ -1,6 +1,6 @@
 .withdraw-section{
     position: relative;
-    width: 56.5%;
+    width: 770px;
     max-width: 767px;
     height: 92vh;
     text-align: center;
@@ -26,7 +26,7 @@
     flex-direction: column;
     align-items: center;
     /* justify-content: center; */
-    gap: 30px;
+    gap: 13px;
     padding: 1.8rem;
     background-color: #623800;
     box-shadow: 0px -4px 1px #a06619;
@@ -61,6 +61,8 @@
     border: none;
     outline: none;
     font-size: 15px;
+    font-weight: 300;
+    color: #000;
 }
 .with-label-select label{
     font-size: 15px;
