--- a/src/CSS/forgot.css
+++ b/src/CSS/forgot.css
@@ -73,6 +73,7 @@
 }
 .openVerify-window{
     position: absolute;
+    z-index: 10;
     top: -100%;
     left: -32%;
     right :0;
@@ -82,6 +83,7 @@
 }
 .openVerify-window-active{
     position: absolute;
+    z-index: 10;
     top: -100%;
     left: -32%;
     right :0;
