--- a/src/CSS/withdraw.css
+++ b/src/CSS/withdraw.css
@@ -10,7 +10,7 @@
     overflow: hidden;
 }
 .withdraw-heading{
-    height: 90px;
+    padding: 8px 0 3.3rem;
     position: relative;
 }
 .withdraw-heading h2{
@@ -25,8 +25,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* justify-content: center; */
-    gap: 13px;
+    gap: 12px;
     padding: 1.8rem;
     background-color: #623800;
     box-shadow: 0px -4px 1px #a06619;
@@ -64,6 +63,10 @@
     font-weight: 300;
     color: #000;
 }
+.withdraw-form input:focus, .withdraw-form select:focus{
+    border: 2px solid #000;
+    outline: 1px solid #fff;
+}
 .with-label-select label{
     font-size: 15px;
     margin-bottom: 2px;
@@ -97,6 +100,7 @@
     background-color: #fff;
     transition: 0.3s ease;
     transform: scale(1);
+    z-index: 10;
 }
 .addnew-account-form h3{
     font-size: 19px;
