--- a/src/CSS/backLogout.css
+++ b/src/CSS/backLogout.css
@@ -10,15 +10,16 @@
 }
 .back-logout-btn{
     display: flex;
-    align-items: center;
+    align-items: flex-end;
+    justify-content: center;
     border: none;
     outline: none;
     color: #000;
-    padding: 5px 12px;
+    padding: 5px 11px;
     border-radius: 6px;
     background-color: #f8f9fa;
-    font-size: 14.5px;
-    font-weight: 600;
+    font-size: 15px;
+    font-weight: 700;
     font-family: "Poppins", sans-serif;
     transition: .2s ease;
     cursor: pointer;
@@ -29,4 +30,19 @@
 .back-arrow{
     font-size: 23px;
     margin-left: -5px;
+}
+
+@media screen and (max-width: 320px) {
+    .forgot-nav{
+        padding: 7px 8px 0;
+    }
+    .back-logout-btn{
+        align-items: center;
+        padding: 3px 6px;
+        border-radius: 6px;
+        font-size: 12px;
+    }
+    .back-arrow{
+        font-size: 19px;
+    }
 }
