--- a/src/CSS/deposit.css
+++ b/src/CSS/deposit.css
@@ -19,6 +19,7 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    row-gap: 15px;
     padding: 1px 38px 30px 30px;
     margin-bottom: 1.8rem;
 }
@@ -135,4 +136,78 @@ input[type="file"]::file-selector-button{
     font-size: 15px;
     font-weight: 600;
     border-radius: 10px;
+}
+
+
+@media screen and (max-width: 1024px){
+    .deposit-form{
+        overflow-y: auto;
+        gap: 10px;
+    }
+    .deposit-submit-btn{
+        padding: 5px 0;
+        margin-top: 10px;
+    }
+}
+@media screen and (max-width: 581px) {
+    .deposit-section{
+        margin-top: 0;
+        height: 100vh;
+        border-radius: 0;
+    }
+    .bank-details{
+        justify-content: center;
+        padding: 1px 38px 20px 30px;
+        margin-bottom: 0;
+    }
+    .bank-detail{
+        width: 30%;
+    }
+    .deposit-content{
+        padding: 10px 30px;
+        gap: 5px;
+    }
+    .deposit-content h2{
+        font-size: 22px;
+    }
+    .deposit-form{
+        width: 100%;
+    }
+}
+@media screen and (max-width: 481px) {
+    .deposit-form{
+        height: 200px;
+        overflow-y: auto;
+    }
+    .bank-detail{
+        width: 40%;
+    }
+}
+@media screen and (max-width: 320px) {
+    .deposit-form{
+        height: 180px;
+    }
+    .bank-detail{
+        width: 50%;
+    }
+    .deposit-submit-btn{
+        border-radius: 5px;
+        margin-top: 0;
+    }
+    .depo-label-input input[type = "number"], .depo-label-input select{
+        height: 33px;
+        padding: 5px 7px;
+        border-radius: 5px;
+        font-size: 12px;
+    }
+    .input-file{
+        height: 37px;
+        padding: 8px 7px;
+        font-size: 12px;
+        border-radius: 5px;
+    }
+    input[type="file"]::file-selector-button{
+        padding: 2px 5px;
+        font-size: 12px;
+    }
 }
