--- a/src/CSS/home.css
+++ b/src/CSS/home.css
@@ -22,13 +22,15 @@
     padding-bottom: 25px;
     display: flex;
     flex-direction: column;
+    align-items: center;
     justify-content: space-between;
     background: linear-gradient(rgba(8, 8, 8, 0.9), rgb(14, 12, 12, 0.9)), url('https://staging.cloud1.me/betting/assets/images/aa.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position-y: center;
 }
-.navbar{
+.home-navbar{
+    width: 100%;
     display: flex;
     justify-content: space-between;
     padding: 7px 12px;
@@ -59,14 +61,15 @@
     margin-top: -20px;
 }
 .deposit-withdraw{
+    width: 100%;
     display: flex;
     justify-content: center;
-    margin-top: 8px;
+    margin-top: 15px;
     gap: 20px;
 }
 .depo-with-btn{
     width: 17%;
-    height: 90px;
+    height: 95px;
     border-radius: 13px;
     font-size: 14px;
     font-weight: 700;
@@ -105,8 +108,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 30px;
-    padding: 5rem 3rem;
+    gap: 10px;
+    padding: 4.5rem 3rem;
     background-color: #623800;
     box-shadow: 0px -4px 1px #a06619;
     border-radius: 60px 60px 0 0;
@@ -129,7 +132,7 @@
 }
 .download-btn img{
     width: 28px;
-    height: 45px;
+    height: 48px;
 }
 .btn-instruct{
     color: #000;
@@ -137,6 +140,8 @@
     line-height: 23px;
 }
 .btn-instruct h4{
+    margin: 0;
+    font-size: 16px;
     font-weight: 700 !important;
 }
 .btn-instruct span{
@@ -299,4 +304,123 @@
     transform: translateY(0);
     z-index: 2;
     transition: 0.3s ease;
+}
+
+@media screen and (max-width: 581px) {
+    .home-page{
+        margin-top: 0;
+    }
+    .home-bg{
+        padding-bottom: 10px;
+    }
+    .logo{
+        width: 35%;
+        margin-top: -35px;
+    }
+    .depo-with-btn{
+        width: 31%;
+        height: 92px;
+    }
+    .download p{
+        font-size: 27px;
+    }
+    .login-section{
+        transform: translateY(130%);
+    }
+    .login-section-open{
+        transform: translateY(13%);
+    }
+    .signup-section{
+        transform: translateY(120%);
+    }
+    .signup-section-open{
+        transform: translateY(11%);
+    }
+}
+@media screen and (max-width: 320px) {
+    .home-navbar{
+        padding: 7px 8px;
+    }
+    .login-signup-btn{
+        padding: 3px 7px 5px;
+        font-size: 12px;
+    }
+    .logo{
+        margin-top: -10px;
+    }
+    .logo img{
+        width: 100px;
+    }
+    .depo-with-btn{
+        width: 30%;
+        height: 70px;
+        border-radius: 8px;
+        font-size: 12px;
+    }
+    .deposit-btn img{
+        width: 30px;
+    }
+    .withdraw-btn img{
+        width: 30px;
+    }
+    .depo-with-btn:hover.deposit-btn img{
+        transform: scale(1) rotate(-90deg);
+    }
+    .depo-with-btn:hover.withdraw-btn img{
+        transform: scale(1) rotate(90deg);
+    }
+    .download{
+        padding: 4rem 2rem;
+    }
+    .download p{
+        font-size: 25px;
+        line-height: 28px;
+    }
+    .download-btn{
+        padding: 10px;
+        border-radius: 10px;
+    }
+    .btn-instruct h4{
+        font-size: 14px;
+    }
+    .btn-instruct span{
+        font-size: 12px;
+    }
+    .login-section{
+        width: 95%;
+    }
+    .login-section-open{
+        width: 95%;
+        transform: translateY(22%);
+    }
+    .signup-section{
+        width: 95%;
+    }
+    .signup-section-open{
+        width: 95%;
+        transform: translateY(17%);
+    }
+    .login-section img{
+        width: 100px;
+    }
+    .login-section-open img{
+        width: 100px;
+    }
+    .signup-section img{
+        width: 100px;
+    }
+    .signup-section-open img{
+        width: 100px;
+    }
+    .login-signup-heading{
+        font-size: 15px;
+        margin-top: 10px;
+    }
+    .num-pass{
+        height: 25px;
+        padding: 17px 8px;
+    }
+    .login-register-btn{
+        height: 35px;
+    }
 }
