--- a/src/CSS/menu.css
+++ b/src/CSS/menu.css
@@ -1,3 +1,8 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 .menu span{
     font-size: 2.1rem;
     color: white;
@@ -113,4 +118,48 @@
 .logout-btn span{
     font-size: 22px;
     font-weight: 300;
+}
+
+
+
+@media screen and (max-width: 581px) {
+    .menu-section{
+        width: 400px;
+        height: 100vh;
+        align-items: flex-start;
+        justify-content: flex-start;
+        gap: 12px;
+        transform: translateX(-102%);
+    }
+    .close-menu-btn{
+        width: 400px;
+        height: 100vh;
+        align-items: flex-start;
+        justify-content: flex-start;
+        gap: 12px;
+        transform: translateX(0%);
+    }
+    .menu-top p{
+        margin-bottom: 0;
+    }
+    .logout-btn{
+        margin-left: -6px;
+    }
+}
+@media screen and (max-width: 320px) {
+    .menu span{
+        font-size: 1.7rem;
+    }
+    .menu-section{
+        width: 90%;
+    }
+    .close-menu-btn{
+        width: 90%;
+    }
+    .menu-links{
+        font-size: 14px;
+    }
+    .logout-btn{
+        font-size: 14px;
+    }
 }
