--- a/src/CSS/depositHistory.css
+++ b/src/CSS/depositHistory.css
@@ -27,7 +27,6 @@
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
-    row-gap: 10px;
     padding: 1.5rem 0rem 1rem;
     color: #e0e1e2;
 }
@@ -45,7 +44,6 @@
     margin: 0;
 }
 .user-filling-select{
-    width: 100%;
     display: flex;
     gap: 20px;
     overflow-x: auto;
@@ -161,6 +159,10 @@
     .deposit-heading h1{
         font-size: 25px;
     }
+    .deposit-table-panel{
+        column-gap: 30px;
+        row-gap: 10px;
+    }
     .select-option{
         padding: 4px 10px;
     }
@@ -184,5 +186,4 @@
     .deposit-table-panel{
         flex-direction: column;
     }
-    
 }
