--- a/src/CSS/withdraw.css
+++ b/src/CSS/withdraw.css
@@ -164,7 +164,8 @@
 
 @media screen and (max-width: 1024px){
     .withdraw-form{
-        overflow-y: scroll;
+        height: 100%;
+        overflow-y: auto;
     }
     .withdraw-submit-btn{
         padding: 5px 0;
