--- a/src/CSS/depositHistory.css
+++ b/src/CSS/depositHistory.css
@@ -87,18 +87,16 @@
 /* ---------------------- */
 
 .deposit-table-section{
-    height: 100%;
+    /* height: 100%; */
     padding: 0 10px;
     /* border: solid red; */
 }
 .deposit-table-content{
-    height: 100%;
+    /* height: 100%; */
 }
 .deposit-table-custom{
-    height: 72%;
+    height: 100%;
     overflow-y: auto;
-    padding-bottom: 55px;
-    /* border: solid blue; */
 }
 .deposit-table-custom::-webkit-scrollbar {
     width: 4px;               /* width of the entire scrollbar */
