--- a/src/CSS/home.css
+++ b/src/CSS/home.css
@@ -204,6 +204,7 @@
     margin-top: 20px;
 }
 .login-signup-form{
+    position: relative;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -211,17 +212,19 @@
     margin-top: 10px;
 }
 .num-pass{
-    height: 28px;
+    position: relative;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 10px;
     color: #2b2b2b;
     background-color: #63636385;
-    padding: 21px 10px;
     border-radius: 10px;
 }
 .num-pass label{
+    position: absolute;
+    left: 10px;
     width: 30px;
     font-size: 15px;
     font-weight: 600;
@@ -235,13 +238,15 @@
     background: transparent;
     border: none;
     outline: none;
+    padding: 10px 10px 10px 40px;
+    border-radius: 10px;
     color: #2b2b2b !important;
     font-weight: 600;
     font-size: 16px;
 }
-.num-pass:focus{
-    border: 2px solid #000;
-    outline: 1px solid #fff;
+.num-pass input:focus{
+    border: 1px solid #000;
+    outline: 2px solid #fff;
 }
 .num-pass input::placeholder{
     font-size: 13px;
