--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,18 @@ a{
   position: relative;
   overflow: hidden;
 }
+.red-alert{
+  position: absolute;
+  top: 10%;
+  z-index: 99;
+  font-size: 13px;
+  font-weight: 600;
+  padding: 10px 15px;
+  background-color: #ffffff;
+  color: #fc3434;
+  box-shadow: 0 0 20px #9b9b9b;
+  animation: popupStatus .2s ease;
+}
 
 /* .App-logo {
   height: 40vmin;
