--- a/src/CSS/home.css
+++ b/src/CSS/home.css
@@ -114,11 +114,11 @@
     box-shadow: 0px -4px 1px #a06619;
     border-radius: 60px 60px 0 0;
 }
-.download p{
+.download-p{
     color: #fff;
     font-size: 32.8px;
     font-family: "Montserrat", sans-serif;
-    font-weight: 200 !important;
+    font-weight: 200;
 }
 .download-btn{
     width: fit-content;
@@ -147,168 +147,14 @@
 .btn-instruct span{
     font-size: 13px;
 }
-.login-section{
-    width: 60%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: #fff;
-    position: absolute;
-    bottom: 17rem;
-    border-radius: 40px 40px 0 0;
-    padding: 1.2rem;
-    box-shadow: 0 -5px 0px #1b1b1b;
-    transform: translateY(130%);
-    transition: 0.3s ease;
-}
-.login-section-open{
-    width: 60%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: #fff;
-    position: absolute;
-    bottom: 17rem;
-    border-radius: 40px 40px 0 0;
-    padding: 1.5rem 1.2rem 1.2rem;
-    box-shadow: 0 -5px 0px #1b1b1b;
-    transform: translateY(0);
-    z-index: 2;
-    transition: 0.3s ease;
-}
-.cross{
-    position: absolute;
-    right: 16px;
-    top: 13px;
-    background-color: #333333;
-    display: flex;
-    align-items: center;
-    border-radius: 30px;
-    padding: 3.5px;
-    cursor: pointer;
-    transition: .1s ease;
-}
-.cross:hover{
-    background-color: #623800;
-}
-.cross span{
-    font-size: 17px;
-    font-weight: 600;
-    color: #fff;
-}
-.login-signup-heading{
-    width: 100%;
-    font-size: 18px;
-    letter-spacing: 0.5px;
-    color: #333333;
-    margin-top: 20px;
-}
-.login-signup-form{
-    position: relative;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    margin-top: 10px;
-}
-.num-pass{
-    position: relative;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 10px;
-    color: #2b2b2b;
-    background-color: #63636385;
-    border-radius: 10px;
-}
-.num-pass label{
-    position: absolute;
-    left: 10px;
-    width: 30px;
-    font-size: 15px;
-    font-weight: 600;
-    font-family: "Jost", sans-serif;
-    letter-spacing: -1px;
-    display: flex;
-    align-items: center;
-}
-.num-pass input{
-    width: 100%;
-    background: transparent;
-    border: none;
-    outline: none;
-    padding: 10px 10px 10px 40px;
-    border-radius: 10px;
-    color: #2b2b2b !important;
-    font-weight: 600;
-    font-size: 16px;
-}
-.num-pass input:focus{
-    border: 1px solid #000;
-    outline: 2px solid #fff;
-}
-.num-pass input::placeholder{
-    font-size: 13px;
-    font-weight: 400;
-    color: #727272;
-}
-.lock{
-    font-size: 18px;
-    font-weight: 700;
-}
-.login-register-btn{
-    height: 40px;
-    font-size: 15px;
-    font-weight: 500;
-    color: #c1cccf;
-    background-color: #333333;
-    border-radius: 6px;
-    border: none;
-    outline: none;
-    transition: .2s ease;
-}
-.login-register-btn:hover{
-    background-color: #623800;
-}
-.forget-pass-btn{
-    font-size: 14px;
-    text-decoration: none;
-    color: #333333;
-    margin-top: 5px;
-}
-.signup-section{
-    width: 60%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: #fff;
-    position: absolute;
-    bottom: 17rem;
-    border-radius: 40px 40px 0 0;
-    padding: 2rem 1.2rem 1rem;
-    box-shadow: 0 -7px 0px #1b1b1b;
-    transform: translateY(110%);
-    transition: 0.3s ease;
-}
-.user{
-    font-size: 22px;
-    font-weight: 600;
-}
-.signup-section-open{
-    width: 60%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: #fff;
-    position: absolute;
-    bottom: 17rem;
-    border-radius: 40px 40px 0 0;
-    padding: 2.2rem 1.2rem 1.2rem;
-    box-shadow: 0 -7px 0px #1b1b1b;
-    transform: translateY(0);
-    z-index: 2;
-    transition: 0.3s ease;
+
+@keyframes popupStatus{
+    0%{
+        transform: scale(0);
+    }
+    100%{
+        transform: scale(1);
+    }
 }
 
 @media screen and (max-width: 581px) {
@@ -326,7 +172,7 @@
         width: 31%;
         height: 92px;
     }
-    .download p{
+    .download-p{
         font-size: 27px;
     }
     .login-section{
@@ -416,7 +262,7 @@
     .download{
         padding: 4rem 2rem;
     }
-    .download p{
+    .download-p{
         font-size: 25px;
         line-height: 28px;
     }
