--- a/src/CSS/verifyOtp.css
+++ b/src/CSS/verifyOtp.css
@@ -6,7 +6,7 @@
     border-radius: 15px;
     position: absolute;
     top: 33.5%;
-    left: 20%;
+    /* left: 20%; */
     background-color: #fff;
     z-index: 10;
 }
