--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,27 @@ a{
   box-shadow: 0 0 20px #9b9b9b;
   animation: popupStatus .2s ease;
 }
+/* width */
+::-webkit-scrollbar {
+  width: 4px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 10px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #2c1b04; 
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #442e0e; 
+}
 
 /* .App-logo {
   height: 40vmin;
